// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders daily 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Every day @ 7:00 PM
</Text>
`;

exports[`renders monthly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Once a month on the 29th @ 7:00 PM
</Text>
`;

exports[`renders once next month 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Saturday, Apr 27 @ 5:00 PM
</Text>
`;

exports[`renders once next week 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Thursday, Apr 4 @ 11:00 PM
</Text>
`;

exports[`renders once this week 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Sunday @ 12:00 PM
</Text>
`;

exports[`renders once today 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Today @ 4:00 PM
</Text>
`;

exports[`renders once tomorrow 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Tomorrow @ 4:00 PM
</Text>
`;

exports[`renders weekly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Every Friday @ 7:00 PM
</Text>
`;

exports[`renders with placeholder correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  text
</Text>
`;

exports[`renders with reminder correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Friday, Nov 13 @ 8:52 PM
</Text>
`;

exports[`renders without reminder or placeholder correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      undefined,
    ]
  }
>
  Set a Reminder
</Text>
`;
